--- a/option/index.html
+++ b/option/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>百强聚惠-插件设置</title>
+    <title>品牌特价-插件设置</title>
   </head>
   <body>
     <div id="app"></div>
